2005-06-21 Brian Mury <b.mury@ieee.org>

	* filtertypes.xml, searchtypes.xml, vfoldertypes.xml: fix the
	"match all" case to actually work.

2005-06-08  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (view_changed_cb): make this run a timeout so
	we don't update too often and suck loads of cpu time.

2005-04-12  Not Zed  <NotZed@Ximian.com>

	** See bug #273752

	* em-folder-tree.c (emft_drop_folder_rec): handle NULL
	"parent_name" - dropping to store node.

2005-04-06  Rodney Dawes  <dobey@novell.com>

	* em-folder-view.c (emfv_popup_items): Add Mark as Read/Unread back
	to the context menu
	Fix the ordering values for some menu items in the context menu that
	had duplicate order values

	Fixes bug #73192
	
2005-04-05  Not Zed  <NotZed@Ximian.com>

	** See bug #74320

	* em-format.c (em_format_part_as): if the snooped type is NULL,
	fall back to application/octet-stream.

2005-03-31  Not Zed  <NotZed@Ximian.com>

	** See bug #72935

	* em-folder-view.c: always enable the stop button.

2005-03-31  Not Zed  <NotZed@Ximian.com>

	** See bug #72518

	* em-folder-tree.c (emft_popup_delete_folder): prompt for vfolder
	case differently.

2005-03-31  Not Zed  <NotZed@Ximian.com>

	* message-list.c (on_selection_changed_cmd): only noop if we only
	have 1 message selected, otherwise we don't update the menu's.
	Fixes a problem introduced by 64987's fix.

2005-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* em-format-html.c (efh_format_headers): Don't show multiple
	"Mailer" headers even if multiple x-mailer/user-agent/whatever
	headers exist. Fixes bug #70394.

2005-03-16  Not Zed  <NotZed@Ximian.com>

	** See bug #73363

	* em-folder-view.c (emfv_list_message_selected): insert a timeout
	before loading the message.
	(emfv_message_selected_timeout): handle the timeout, start loading
	the message.
	(emfv_set_folder, emfv_destroy): cleanups for above.

2005-03-16  Not Zed  <NotZed@Ximian.com>

	** See bug #73559
	
	* em-filter-source-element.c