@@ -1,3 +1,11 @@
+2005-06-25  Not Zed  <NotZed@Ximian.com>
+
+	** See bug #307398
+
+	* mail-session.c (alert_user): copy the prompt string, in 'no
+	cancel' mode we run asynchronously.
+	(free_user_message): & free it.
+
 2005-06-21 Brian Mury <b.mury@ieee.org>
 
 	* filtertypes.xml, searchtypes.xml, vfoldertypes.xml: fix the
